[tool.poetry]
name = "lift"
version = "0.1.0"
description = ""
authors = ["dowonim323"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
PyMuPDF = "^1.24.10"
fitz = "^0.0.1.dev2"
opencv-python = "^4.10.0.84"
pytesseract = "^0.3.13"
texify = "^0.1.10"
openai = "^1.44.0"
python-docx = "^1.1.2"
surya-ocr = "^0.5.0"
streamlit = "^1.38.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
